--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.imaginarycode.minecraft</groupId>
+    <groupId>io.minimum.minecraft</groupId>
     <artifactId>RedisBungee</artifactId>
-    <version>0.3.5-SNAPSHOT</version>
+    <version>0.4-SNAPSHOT</version>
 
     <repositories>
         <repository>
